[317]: Refactoring to clean up some SonarLint warnings in EventBookingManager